# Catapult-2026-Best-Ever-Project

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  behavior.py  config.py  logging_config.py  models.py  mood.py  music.py  spotify_client.py  ui.py
src/machine-learning/: README.md  config.py  dataset.py  export_onnx.py  model.py  preprocess.slurm  preprocess_daisee.py  realtime_inference.py  requirements.txt  setup_env.sh  train.py  train.slurm
src/machine-learning/DAiSEE_crops/train/1100011002/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011003/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011010/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011011/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011018/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011019/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011027/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011028/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011038/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011040/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011052/: frames.npy  labels.npy
src/machine-learning/DAiSEE_crops/train/1100011053/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011060/: frames.npy
src/machine-learning/DAiSEE_crops/train/1100011062/: frames.npy
src/machine-learning/slurm/: preprocess.slurm  train.slurm
src/ml-emotions/: README.md  prepare_data.py  requirements.txt  train.py  validate.py  webcam_test.py
src/ml-emotions/slurm/: debug.sh  train.sh  validate.sh
src/ml-focus/: realtime_inference.py  yolo.py
src/ml-focus/eval_results/: metrics.json
(+19 files in other folders)
