[project]
name = "catapult-2026-best-ever-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.3",
    "opencv-python>=4.12.0.88",
    "pyside6>=6.10.0",
    "python-dotenv>=1.2.2",
    "spotipy>=2.26.0",
    "tqdm>=4.67.1",
    "albumentations>=2.0.8",
    "dotenv>=0.9.9",
    "facenet-pytorch>=2.5.3",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "spotipy>=2.26.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
