[project]
name = "catapult-2026-best-ever-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.3",
    "pyside6>=6.10.0",
    "python-dotenv>=1.2.2",
    "spotipy>=2.26.0",
    "albumentations>=2.0.8",
    "dotenv>=0.9.9",
    "facenet-pytorch>=2.5.3",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "pandas>=3.0.2",
    "spotipy>=2.26.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.33",
    "opencv-python-headless>=4.13.0.92",
    "opencv-contrib-python>=4.13.0.92",
    "mediapipe>=0.10.33",
    "dlib>=20.0.1",
    "cmake>=4.3.1",
]
